--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-Hello World
+<html>
+
+<head>
+	<title>TMT02</title>
+
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+<style>
+	body{
+		background-color: #34E4EA;
+	}
+
+	h1{
+		text-align: center;
+		margin-top: 50px;
+		font-family: "Century Gothic","CenturyGothic",AppleGothic,sans-serif;
+		font-size: 50px;
+	}
+
+	h2{
+		text-align: center;
+		margin-top: 50px;
+		font-family: "Century Gothic","CenturyGothic",AppleGothic,sans-serif;
+		font-size: 15px;
+	}
+	textarea{
+		display: block;
+		margin-right: auto;
+		margin-left: auto;
+		width: 400px;
+		height: 1000px;
+		outline: none;
+		border-radius: 5px;
+		color: #000000;
+		border-color: #000000;
+		background-color: #FFFFFF;
+		font-family: "Futura","Trebuchet MS",Arial,sans-serif; 
+		font-size: 25px;
+}
+	
+
+	button{
+		display: block;
+		margin-right: auto;
+		margin-left: auto;
+		margin-top: 50px;
+		width: 200px;
+		height: 50px;
+		outline: none;
+		border-radius: 5px;
+		background-color: #0000FF;
+		border-color: #FF0000;
+		color: #00FF00;
+		font-family: "Futura","Trebuchet MS",Arial,sans-serif;
+		font-size: 40px; 
+	}
+</style>
+</head>
+<body>
+
+	<h1>Hello, I'm Minecraft Master God</h1>
+	<h1>How may I help you?</h1>
+	<h2>Make sure you have the address.</h2>
+	<textarea></textarea>
+	<button><span class="glyphicon glyphicon-search" aria-hidden="true"></span>Send Compliment</button>
+</body>
+
+<script>
+	
+	firebase = new Firebase("https://kripacomplimets.firebase.com/");
+
+	firebase.remove();
+
+	//whenever I get new data from firebase, do the onMessage function
+	firebase.on("child_added", onMessage);
+
+	//when I click the button, do the whenClicked function
+	$('button').click(whenClicked);
+
+	function whenClicked()	{
+		var text; //make a variable called text
+		text = $('textarea').val('Thanks for the compliment. I will be there soon.');
+	}
+
+	function onMessage(message){
+		$('h1').text(message.val()) );
+	}
+</script>
+
+</html>
